--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "git push heroku master",
     "migrate": "postgrator --config postgrator-config.js",
     "migrate:test": "env NODE_ENV=test npm run migrate",
+    "migrate:production": "env SSL=true DATABASE_URL=$(heroku config:get DATABASE_URL) npm run migrate",
     "dev": "nodemon src/server.js"
   },
   "keywords": [],
