--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "helmet": "^3.21.0",
+    "jshint": "^2.11.0-rc1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.1",
     "morgan": "^1.9.1",
